tests/baselines/reference/moduleKeywordRepeatError.errors.txt
tests/cases/compiler/moduleKeywordRepeatError.ts(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node` and then add `node` to the types field in your tsconfig.
tests/cases/compiler/moduleKeywordRepeatError.ts(3,15): error TS1005: ';' expected.


==== tests/cases/compiler/moduleKeywordRepeatError.ts (2 errors) ====
    // "module.module { }" should raise a syntax error
    
    module.module { }
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i @types/node` and then add `node` to the types field in your tsconfig.
                  ~
!!! error TS1005: ';' expected.